--- a/android worx.html
+++ b/android worx.html
@@ -64,6 +64,86 @@ Minecraft received critical acclaim and has won numerous awards and accolades. S
   <center><a href="https://drive.google.com/file/d/0B2zGTo2oTqGNN2xkUGNqYU5pdkU/view?usp=drivesdk"><button class="btn-success btn-lg">DOWNLOAD(.apk)</button></a></center>
  
 </div>
+      
+      <br/><div class="jumbotron"><img src="https://lh3.googleusercontent.com/uVWNNRQ3jjoKo4JS0bri42lii_UJB9mqE-FJZvmXPFYt9Bh3_sy_nD0l47b893gaoSfW=s180-rw" 
+class="img-circle" align="left" width="10%">
+<h3><b>	
+AntiVirus PRO Android Security</b><br/>
+<h6>AVG/h6><b></h3><br/><br>
+<br/><br/>
+  
+  Get AVG AntiVirus PRO Android™ Security now for premium, full featured protection from viruses, malware, spyware and online exploitation in real-time.
+
+Download NOW with just an easy 1-time payment and join over 100,000,000 people who already installed AVG’s antivirus mobile security apps!
+
+
+<br/>
+<br/>
+<button data-toggle="collapse" data-target="#avg" class="btn-info btn-xs">more/less</button>
+
+<div id="avg" class="collapse"><br/><p>
+  With AVG AntiVirus PRO Android Security you can:
+★ Scan apps and games in real-time
+★ Enable locating your lost phone via Google Maps™
+★ Kill tasks that can slow down your phone
+★ Monitor & Optimize battery, storage and data package usage
+★ Hide your most-private photos in an encrypted Vault
+★ Scan WiFi networks for encryption issues, weak passwords and other threats
+★ See which apps you spend the most time on with App Insights
+
+In addition, when installing the premium app, you also get:
+★ App Lock - password protection for sensitive apps
+★ Camera Trap - discreetly emails you a photo of anyone trying to unlock your phone
+★ Device Lock - locks your phone whenever the SIM card is replaced
+
+App Features:
+Protection:
+★ Scan apps and games for malicious content
+★ Scan websites for harmful threats and get redirected to “Safe Page” when a threat is detected (Android's default browser and Chrome and OS older than 6.0)
+★ WiFi Scanner, Analyzer and Inspector for network encryption, password strength, Captive Portal (ones that make you 'sign-in' before you can use the WiFi) and ARP Poisoning (lets attackers re-direct you to a different URL)
+
+Performance:
+★ Monitor battery consumption to optimize and save power
+★ Kill tasks and processes to help boost speed
+★ Keep track of your mobile data plan usage
+★ Optimize storage space (internal and SD card)
+
+Anti-Theft:
+Use AVG AntiVirus PRO Android Security together with AVG’s remote management console or text messages (SMS) to:
+★ Locate your lost phone via Google Maps
+★ Lock your phone and set a lock screen message to help the locator find you
+★ Make your phone shout (ring) even if it is on silent mode
+★ Wipe your phone and SD card content
+★ Camera Trap: discreetly emails you a photo of anyone who enters 3 wrong passwords when trying to unlock your phone
+★ Device Lock: automatically locks your phone whenever the SIM card is replaced
+
+Privacy:
+★ Hide private photos in a password-protected Vault to prevent others from snooping on your memories
+★ App Lock: lock sensitive apps to protect your privacy and safety or lock your phone settings to secure its configuration
+★ Call and Message Blocker: protect yourself against spammers, hackers and scammers. Get warned about suspicious text messages, filter and block unwanted calls and messages (SMS Blocker isn’t available for devices with Android v4.4 and newer)
+★ Delete call history, clipboard content and browsing history (Chrome)
+★ Wipe contacts, text messages, photos, browser history, calendar, format SD card and restore device to factory settings
+
+AVG AntiVirus PRO Android Security is available in 33 languages.
+
+This app uses the Device Administrator permission. This permission allows you to remotely lock and wipe your device from my.avg.com. 
+
+This app uses Accessibility permission to protect visually impaired and other users against phishing attacks and malicious websites.
+
+</p>
+ </br>
+ <img src="https://lh3.googleusercontent.com/2Hb7Gpk4XLgGRfJnB2PwKMm1zhPKS8TiOXTNW2pcrPKi5QLML1zw-t9BMIwIk14pBxg=w720-h310-rw"
+ class="img-thumbnail" align="center" width="30%">&nbsp&nbsp <img src="https://lh3.googleusercontent.com/V9k3j6IfkZ7Nj01jwyYyY27J4yCFcb3z4G826QT1F45ZB5avjsFttAxRLLsG5yiVAA=w720-h310-rw"
+ class="img-thumbnail" align="center" width="30%"><br/>
+ <center><br/><a href="http://s1.rexdl.com/android/app/Mobile-AntiVirus-Security-PRO-v6.7.1-PreCracked-www.ReXdl.com.apk"><button class="btn-success btn-lg">DOWNLOAD(.apk)</button></a><br/><br/>
+   <b>please leave a comment in livechat option if something goes wrong with downloading or installing.</b>
+ <br/><h6>A demand from:
+	
+</h6></center><p>
+
+<a href="mailto:rishav16012001@gmail.com">rishav16012001@gmail.com</a>
+</div> </div>
+
       </div>
     </body>
   </html>
