--- a/android worx.html
+++ b/android worx.html
@@ -63,7 +63,7 @@ Minecraft received critical acclaim and has won numerous awards and accolades. S
        class="img-thumbnail" width="40%"><br/>
   <center><a href="https://drive.google.com/file/d/0B2zGTo2oTqGNN2xkUGNqYU5pdkU/view?usp=drivesdk"><button class="btn-success btn-lg">DOWNLOAD(.apk)</button></a></center>
  
-</div>
+</div></div>
       
       <br/><div class="jumbotron"><img src="https://lh3.googleusercontent.com/uVWNNRQ3jjoKo4JS0bri42lii_UJB9mqE-FJZvmXPFYt9Bh3_sy_nD0l47b893gaoSfW=s180-rw" 
 class="img-circle" align="left" width="10%">
@@ -82,26 +82,26 @@ Download NOW with just an easy 1-time payment and join over 100,000,000 people w
 <button data-toggle="collapse" data-target="#avg" class="btn-info btn-xs">more/less</button>
 
 <div id="avg" class="collapse"><br/><p>
-  With AVG AntiVirus PRO Android Security you can:
-★ Scan apps and games in real-time
-★ Enable locating your lost phone via Google Maps™
-★ Kill tasks that can slow down your phone
-★ Monitor & Optimize battery, storage and data package usage
-★ Hide your most-private photos in an encrypted Vault
-★ Scan WiFi networks for encryption issues, weak passwords and other threats
-★ See which apps you spend the most time on with App Insights
+  With AVG AntiVirus PRO Android Security you can: <br/>
+★ Scan apps and games in real-time <br/>
+★ Enable locating your lost phone via Google Maps™ <br/>
+★ Kill tasks that can slow down your phone <br/>
+★ Monitor & Optimize battery, storage and data package usage <br/>
+★ Hide your most-private photos in an encrypted Vault <br/>
+★ Scan WiFi networks for encryption issues, weak passwords and other threats <br/>
+★ See which apps you spend the most time on with App Insights <br/> <br/>
 
-In addition, when installing the premium app, you also get:
-★ App Lock - password protection for sensitive apps
-★ Camera Trap - discreetly emails you a photo of anyone trying to unlock your phone
-★ Device Lock - locks your phone whenever the SIM card is replaced
+In addition, when installing the premium app, you also get: <br/>
+★ App Lock - password protection for sensitive apps <br/>
+★ Camera Trap - discreetly emails you a photo of anyone trying to unlock your phone <br/>
+★ Device Lock - locks your phone whenever the SIM card is replaced <br/> <br/>
 
-App Features:
-Protection:
-★ Scan apps and games for malicious content
-★ Scan websites for harmful threats and get redirected to “Safe Page” when a threat is detected (Android's default browser and Chrome and OS older than 6.0)
+App Features: <br/>
+Protection: <br/>
+★ Scan apps and games for malicious content <br/>
+★ Scan websites for harmful threats and get redirected to “Safe Page” when a threat is detected (Android's default browser and Chrome and OS older than 6.0) <br/>
 ★ WiFi Scanner, Analyzer and Inspector for network encryption, password strength, Captive Portal (ones that make you 'sign-in' before you can use the WiFi) and ARP Poisoning (lets attackers re-direct you to a different URL)
-
+ <br/>
 Performance:
 ★ Monitor battery consumption to optimize and save power
 ★ Kill tasks and processes to help boost speed
