--- a/android worx.html
+++ b/android worx.html
@@ -102,33 +102,35 @@ Protection: <br/>
 ★ Scan websites for harmful threats and get redirected to “Safe Page” when a threat is detected (Android's default browser and Chrome and OS older than 6.0) <br/>
 ★ WiFi Scanner, Analyzer and Inspector for network encryption, password strength, Captive Portal (ones that make you 'sign-in' before you can use the WiFi) and ARP Poisoning (lets attackers re-direct you to a different URL)
  <br/>
-Performance:
-★ Monitor battery consumption to optimize and save power
-★ Kill tasks and processes to help boost speed
-★ Keep track of your mobile data plan usage
-★ Optimize storage space (internal and SD card)
+Performance: <br/>
 
-Anti-Theft:
-Use AVG AntiVirus PRO Android Security together with AVG’s remote management console or text messages (SMS) to:
-★ Locate your lost phone via Google Maps
-★ Lock your phone and set a lock screen message to help the locator find you
-★ Make your phone shout (ring) even if it is on silent mode
-★ Wipe your phone and SD card content
-★ Camera Trap: discreetly emails you a photo of anyone who enters 3 wrong passwords when trying to unlock your phone
-★ Device Lock: automatically locks your phone whenever the SIM card is replaced
+★ Monitor battery consumption to optimize and save power <br/>
 
-Privacy:
-★ Hide private photos in a password-protected Vault to prevent others from snooping on your memories
-★ App Lock: lock sensitive apps to protect your privacy and safety or lock your phone settings to secure its configuration
-★ Call and Message Blocker: protect yourself against spammers, hackers and scammers. Get warned about suspicious text messages, filter and block unwanted calls and messages (SMS Blocker isn’t available for devices with Android v4.4 and newer)
-★ Delete call history, clipboard content and browsing history (Chrome)
+★ Kill tasks and processes to help boost speed<br/>
+★ Keep track of your mobile data plan usage<br/>
+★ Optimize storage space (internal and SD card)<br/>
+
+Anti-Theft:<br/>
+Use AVG AntiVirus PRO Android Security together with AVG’s remote management console or text messages (SMS) to:<br/>
+★ Locate your lost phone via Google Maps<br/>
+★ Lock your phone and set a lock screen message to help the locator find you<br/>
+★ Make your phone shout (ring) even if it is on silent mode<br/>
+★ Wipe your phone and SD card content<br/>
+★ Camera Trap: discreetly emails you a photo of anyone who enters 3 wrong passwords when trying to unlock your phone<br/>
+★ Device Lock: automatically locks your phone whenever the SIM card is replaced<br/>
+
+Privacy:<br/>
+★ Hide private photos in a password-protected Vault to prevent others from snooping on your memories<br/>
+★ App Lock: lock sensitive apps to protect your privacy and safety or lock your phone settings to secure its <br/>configuration
+★ Call and Message Blocker: protect yourself against spammers, hackers and scammers. Get warned about suspicious<br/> text messages, filter and block unwanted calls and messages (SMS Blocker isn’t available for devices with Android v4.4 and newer)
+★ Delete call history, clipboard content and browsing history (Chrome)<br/>
 ★ Wipe contacts, text messages, photos, browser history, calendar, format SD card and restore device to factory settings
 
-AVG AntiVirus PRO Android Security is available in 33 languages.
+AVG AntiVirus PRO Android Security is available in 33 languages.<br/>
 
-This app uses the Device Administrator permission. This permission allows you to remotely lock and wipe your device from my.avg.com. 
+This app uses the Device Administrator permission. This permission allows you to remotely lock and wipe your device from my.avg.com. <br/>
 
-This app uses Accessibility permission to protect visually impaired and other users against phishing attacks and malicious websites.
+This app uses Accessibility permission to protect visually impaired and other users against phishing attacks and malicious websites.<br/>
 
 </p>
  </br>
