--- a/softwares.html
+++ b/softwares.html
@@ -49,20 +49,20 @@ class="img-circle" align="left" width="10%">
 SketchUp, formerly Google Sketchup, is a 3D modeling computer program for a wide range of drawing applications <br/>
 	
 <br/>
-<button data-toggle="collapse" data-target="#wten" class="btn-info btn-xs">more/less</button>
+<button data-toggle="collapse" data-target="#sktchup" class="btn-info btn-xs">more/less</button>
 
-<div id="wten" class="collapse"><br/>
-	such as architectural, interior design, landscape architecture, civil and mechanical engineering,<br/>
+<div id="sktchup" class="collapse"><br/>
+	<p>such as architectural, interior design, landscape architecture, civil and mechanical engineering,<br/>
 	film and video game design. It is available as a web-based application, SketchUp Free, <br/>
 	a freeware version, SketchUp Make,and a paid version with additional functionality, SketchUp Pro.
  And.. nothing more to say..<br/>
  just download the WinRar archive file(.rar)<br/>
-	and the crack</br>
+	and the crack</br></p>
  <img src="https://www.sketchup.com/sites/all/themes/sketch_www/images/2016/pro/powerful-image-02.png"
  class="img-thumbnail" align="center" width="30%"> <img src="https://www.sketchup.com/sites/all/themes/sketch_www/images/2016/pro/powerful-image-02.png"
  class="img-thumbnail" align="center" width="30%"><br/>
  <center><br/><a href="http://dl.archline.ir/file/software/SketchUp.Pro.2017.17.0.18899.x64.rar"><button class="btn-success btn-lg">DOWNLOAD</button></a><br/>
-	 <a href="http://dl.archline.ir/file/software/crack_sketchup.rar"><button class="btn-success btn-lg">DOWNLOAD(crack)</button></a><br/>
+	 <br/><a href="http://dl.archline.ir/file/software/crack_sketchup.rar"><button class="btn-success btn-lg">DOWNLOAD(crack)</button></a><br/>
  <br/><h6>A demand from:
 prabhashsingh1234@gmail.com
 </h6> <br/>
